tests/baselines/reference/typeParameterArgumentEquivalence5.errors.txt
==== tests/cases/compiler/typeParameterArgumentEquivalence5.ts (2 errors) ====
    function foo<T,U>() {
        var x: () => (item) => U;
        var y: () => (item) => T;
        x = y;  // Should be an error
        ~
!!! typeParameterArgumentEquivalence5.ts(4,5): error TS2012: Type '() => (item: any) => T' is not assignable to type '() => (item: any) => U':
!!! 	Call signatures of types '() => (item: any) => T' and '() => (item: any) => U' are incompatible:
!!! 		Call signatures of types '(item: any) => T' and '(item: any) => U' are incompatible.
        y = x;  // Shound be an error
        ~
!!! typeParameterArgumentEquivalence5.ts(5,5): error TS2012: Type '() => (item: any) => U' is not assignable to type '() => (item: any) => T':
!!! 	Call signatures of types '() => (item: any) => U' and '() => (item: any) => T' are incompatible:
!!! 		Call signatures of types '(item: any) => U' and '(item: any) => T' are incompatible.
    }
    